@@ -1,14 +1,13 @@
 object FBatchOberflaeche: TFBatchOberflaeche
-  Left = 1179
-  Height = 493
-  Top = 240
-  Width = 741
+  Left = 438
+  Height = 520
+  Top = 348
+  Width = 782
   Caption = 'opsi-script'
-  ClientHeight = 493
-  ClientWidth = 741
+  ClientHeight = 520
+  ClientWidth = 782
   Color = cl3DDkShadow
-  DesignTimePPI = 91
-  Font.Height = 13
+  Font.Height = 14
   Font.Name = 'System'
   Font.Pitch = fpVariable
   OnActivate = FormActivate
@@ -20,27 +19,27 @@ object FBatchOberflaeche: TFBatchOberflaeche
   OnResize = FormResize
   OnWindowStateChange = FormWindowStateChange
   Position = poScreenCenter
-  LCLVersion = '2.0.12.0'
+  LCLVersion = '2.2.0.1'
   object PanelFillScreen: TPanel
     Left = 0
-    Height = 493
+    Height = 520
     Top = 0
-    Width = 741
+    Width = 782
     Align = alClient
     AutoSize = True
-    ClientHeight = 493
-    ClientWidth = 741
+    ClientHeight = 520
+    ClientWidth = 782
     Color = clMenuBar
-    Font.Height = 13
+    Font.Height = 14
     Font.Name = 'System'
     Font.Pitch = fpVariable
     ParentColor = False
     ParentFont = False
     TabOrder = 0
     object ImageOpsiBackground: TImage
-      Left = 263
+      Left = 304
       Height = 542
-      Top = -23
+      Top = 4
       Width = 489
       Align = alCustom
       Anchors = [akRight, akBottom]
@@ -57,7 +56,7 @@ object FBatchOberflaeche: TFBatchOberflaeche
       ClientHeight = 430
       ClientWidth = 605
       Color = clWindow
-      Font.Height = 13
+      Font.Height = 14
       Font.Name = 'System'
       Font.Pitch = fpVariable
       ParentColor = False
@@ -76,146 +75,140 @@ object FBatchOberflaeche: TFBatchOberflaeche
         Transparent = True
       end
       object LabelProgress: TLabel
-        Left = 27
-        Height = 15
-        Top = 303
-        Width = 497
+        Left = 28
+        Height = 16
+        Top = 320
+        Width = 524
         AutoSize = False
         Caption = 'Activity'
         Font.CharSet = ANSI_CHARSET
         Font.Color = clBlack
-        Font.Height = -11
+        Font.Height = -12
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Quality = fqDraft
-        ParentColor = False
         ParentFont = False
         WordWrap = True
       end
       object LabelVersion: TLabel
-        Left = 72
-        Height = 12
-        Top = 15
-        Width = 65
+        Left = 76
+        Height = 16
+        Top = 16
+        Width = 85
         Alignment = taRightJustify
         Caption = 'LabelVersion'
         Font.Color = clBlack
-        Font.Height = 10
+        Font.Height = 11
         Font.Name = 'System'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
-        ParentColor = False
         ParentFont = False
       end
       object ImageProduct: TImage
-        Left = 212
-        Height = 136
-        Top = 42
-        Width = 136
+        Left = 224
+        Height = 143
+        Top = 44
+        Width = 143
         Center = True
       end
       object LabelProduct: TLabel
-        Left = 121
-        Height = 39
-        Top = 197
-        Width = 319
+        Left = 128
+        Height = 41
+        Top = 208
+        Width = 337
         Alignment = taCenter
         AutoSize = False
         Caption = 'LabelProductImage'
         Font.Color = clBlack
-        Font.Height = 40
+        Font.Height = 42
         Font.Name = 'Arial'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
-        ParentColor = False
         ParentFont = False
         OptimalFill = True
       end
       object LabelInfo: TLabel
-        Left = 46
-        Height = 15
-        Top = 250
-        Width = 471
+        Left = 49
+        Height = 16
+        Top = 264
+        Width = 497
         Alignment = taCenter
         AutoSize = False
         Caption = 'Info'
         Font.Color = clBlack
-        Font.Height = 16
+        Font.Height = 17
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
-        ParentColor = False
         ParentFont = False
       end
       object LabelCommand: TLabel
-        Left = 27
-        Height = 18
-        Top = 288
-        Width = 497
+        Left = 28
+        Height = 19
+        Top = 304
+        Width = 524
         Alignment = taCenter
         AutoSize = False
         Caption = 'Command'
         Font.Color = clBlack
-        Font.Height = 11
+        Font.Height = 12
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Style = [fsBold]
-        ParentColor = False
         ParentFont = False
       end
       object LabelDetail: TLabel
-        Left = 27
-        Height = 27
-        Top = 269
-        Width = 497
+        Left = 28
+        Height = 28
+        Top = 284
+        Width = 524
         Alignment = taCenter
         AutoSize = False
         Caption = 'Detail'
         Font.Color = clBlack
-        Font.Height = 16
+        Font.Height = 17
         Font.Name = 'Times New Roman'
         Font.Pitch = fpVariable
         Font.Style = [fsItalic]
-        ParentColor = False
         ParentFont = False
       end
       object ImageLogo1: TImage
-        Left = 57
-        Height = 76
-        Top = 76
-        Width = 76
+        Left = 60
+        Height = 80
+        Top = 80
+        Width = 80
         Center = True
         Transparent = True
       end
       object ImageLogo2: TImage
-        Left = 417
-        Height = 76
-        Top = 76
-        Width = 76
+        Left = 440
+        Height = 80
+        Top = 80
+        Width = 80
         Center = True
         Transparent = True
       end
       object Image1Over: TImage
-        Left = 205
-        Height = 152
-        Top = 34
-        Width = 152
+        Left = 216
+        Height = 160
+        Top = 36
+        Width = 160
         Center = True
         Transparent = True
       end
       object Image2Over: TImage
-        Left = 32
-        Height = 79
-        Top = 337
-        Width = 503
+        Left = 34
+        Height = 83
+        Top = 356
+        Width = 531
         Center = True
         Transparent = True
       end
       object ActivityBar: TProgressBar
-        Left = 79
-        Height = 19
-        Top = 242
-        Width = 446
-        Font.Height = 13
+        Left = 83
+        Height = 20
+        Top = 255
+        Width = 471
+        Font.Height = 14
         Font.Name = 'System'
         Font.Pitch = fpVariable
         ParentFont = False
@@ -229,27 +222,27 @@ object FBatchOberflaeche: TFBatchOberflaeche
     Enabled = False
     Interval = 200
     OnTimer = TimerActivityTimer
-    Left = 645
-    Top = 53
+    Left = 680
+    Top = 56
   end
   object TimerDetail: TTimer
     Enabled = False
     Interval = 200
     OnTimer = TimerDetailTimer
-    Left = 645
-    Top = 99
+    Left = 680
+    Top = 104
   end
   object TimerCommand: TTimer
     Enabled = False
     Interval = 200
     OnTimer = TimerCommandTimer
-    Left = 690
-    Top = 53
+    Left = 728
+    Top = 56
   end
   object TimerProcessMess: TTimer
     Interval = 200
     OnTimer = TimerProcessMessTimer
-    Left = 618
-    Top = 188
+    Left = 652
+    Top = 198
   end
 end
